5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1758_1189.log
== TEST (2019-05-29 15:43:57) 
-- CODE:
vet= input("digite aqui sua frase")
x= vet.replace (' ','')
print(x)
-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:44:16) 
-- CODE:
vet= input("digite aqui sua frase")
x= vet.replace.upper() (' ','')
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x= vet.replace.upper() (' ','')
AttributeError: 'builtin_function_or_method' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:44:43) 
-- CODE:
vet= input("digite aqui sua frase")
x= (vet.replace. (' ','')).upper()
print(x)
-- ERROR:
File "XXXX", line 2
    x= (vet.replace. (' ','')).upper()
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:45:01) 
-- CODE:
vet= input("digite aqui sua frase")
x= vet.upper().replace. (' ','')
print(x)
-- ERROR:
File "XXXX", line 2
    x= vet.upper().replace. (' ','')
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:45:19) 
-- CODE:
vet= input("digite aqui sua frase")
x= vet.replace. (' ','')
y= x.upper
print(y)
-- ERROR:
File "XXXX", line 2
    x= vet.replace. (' ','')
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:45:25) 
-- CODE:
vet= input("digite aqui sua frase")
x= vet.replace (' ','')
y= x.upper
print(y)
-- OUTPUT:
<built-in method upper of str object at 0x7f8c61149780>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:45:40) 
-- CODE:
vet= input("digite aqui sua frase")
x= vet.replace (' ','')
print (x)
-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:46:02) 
-- CODE:
vet= input("digite aqui sua frase")
x= vet.replace (' ','')
y=x.upper()
print (x)
-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:46:13) 
-- CODE:
vet= input("digite aqui sua frase")
x= vet.replace (' ','')
y=x.upper()
print (y)
-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:49:07) 
-- CODE:
vet= input("digite aqui sua frase")
x= vet.replace (' ','')
y=x.upper()
print (y)

if(vet[0:-1]==vet[-1:0])
	print(1)
else:
	print(0)
-- ERROR:
File "XXXX", line 6
    if(vet[0:-1]==vet[-1:0])
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:50:30) 
-- CODE:
vet= input("digite aqui sua frase")
x= vet.replace (' ','')
y=x.upper()
print (y)
k= vet
j= vet[-1:]
print(j)
-- OUTPUT:
ACARARAJADADAJARARACA
A
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:51:10) 
-- CODE:
vet= input("digite aqui sua frase")
x= vet.replace (' ','')
y=x.upper()
print (y)
i=0
k= vet
j= vet[i:]
print(j)
-- OUTPUT:
ACARARAJADADAJARARACA
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:51:21) 
-- CODE:
vet= input("digite aqui sua frase")
x= vet.replace (' ','')
y=x.upper()
print (y)
i=0
k= vet
j= vet[:i]
print(j)
-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:51:50) 
-- CODE:
vet= input("digite aqui sua frase")
x= vet.replace (' ','')
y=x.upper()
print (y)
i=0
k= vet
j= vet[-1:0]
print(j)
-- OUTPUT:
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:54:15) 
-- CODE:
vet= input("digite aqui sua frase")
x= vet.replace (' ','')
y=x.upper()
print (y)
i=0
k= vet
j= vet[::-1]
print(j)
-- OUTPUT:
ACARARAJADADAJARARACA
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:54:46) 
-- CODE:
vet= input("digite aqui sua frase")
x= vet.replace (' ','')
y=x.upper()
print (y)
i=0
k= vet
j= vet[::-1]
if (k==j):
	print(1)
else:
	print(0)
-- OUTPUT:
ACARARAJADADAJARARACA
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:55:21) 
-- CODE:
vet= input("digite aqui sua frase")
x= vet.replace (' ','')
y=x.upper()
print (y)
i=0
k= vet
j= vet[::-1]
print(k)
print(j)
-- OUTPUT:
ACARARAJADADAJARARACA
ACARARAJADADAJARARACA
ACARARAJADADAJARARACA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:58:06) 
-- CODE:
vet= input("digite aqui sua frase")
x= vet.replace (' ','')
y=x.upper()
print (y)
inv=""
i=-1
while(i>=-len(new)):
	inv=inv+x[i]
	i=i-1
print(x.upper())
if(inv==x):
	print(1)
else:
	print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    while(i>=-len(new)):
NameError: name 'new' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:58:09) 
-- CODE:
vet= input("digite aqui sua frase")
x= vet.replace (' ','')
y=x.upper()
print (y)
inv=""
i=-1
while(i>=-len(new)):
	inv=inv+x[i]
	i=i-1
print(x.upper())
if(inv==x):
	print(1)
else:
	print(0)
-- EXECUTION TIME:
0.148521
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1189/main.py", line 7, in <module>
    while(i>=-len(new)):
NameError: name 'new' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:58:53) 
-- CODE:
vet= input("digite aqui sua frase")
new= vet.replace (' ','')
inv=""
i=-1
while(i>=-len(new)):
	inv=inv+new[i]
	i=i-1
print(x.upper())
if(inv==x):
	print(1)
else:
	print(0)
-- EXECUTION TIME:
0.199662
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1189/main.py", line 8, in <module>
    print(x.upper())
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:59:00) 
-- CODE:
vet= input("digite aqui sua frase")
new= vet.replace (' ','')
inv=""
i=-1
while(i>=-len(new)):
	inv=inv+new[i]
	i=i-1
print(x.upper())
if(inv==new):
	print(1)
else:
	print(0)
-- EXECUTION TIME:
0.132069
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1189/main.py", line 8, in <module>
    print(x.upper())
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:59:01) 
-- CODE:
vet= input("digite aqui sua frase")
new= vet.replace (' ','')
inv=""
i=-1
while(i>=-len(new)):
	inv=inv+new[i]
	i=i-1
print(x.upper())
if(inv==new):
	print(1)
else:
	print(0)
-- EXECUTION TIME:
0.150639
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1189/main.py", line 8, in <module>
    print(x.upper())
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:59:02) 
-- CODE:
vet= input("digite aqui sua frase")
new= vet.replace (' ','')
inv=""
i=-1
while(i>=-len(new)):
	inv=inv+new[i]
	i=i-1
print(x.upper())
if(inv==new):
	print(1)
else:
	print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(x.upper())
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:59:12) 
-- CODE:
vet= input("digite aqui sua frase")
new= vet.replace (' ','')
inv=""
i=-1
while(i>=-len(new)):
	inv=inv+new[i]
	i=i-1
print(new.upper())
if(inv==new):
	print(1)
else:
	print(0)
-- EXECUTION TIME:
0.211941
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
